contrast fix

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -116,7 +116,9 @@ nav a{
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
-
+.add-class{
+  color: black;
+}
 /* Label styling */
 .add-inventory label {
   font-size: 1.1rem;
